<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rate My View</string>

    <!-- URLs for the app to use -->
    <!--<string name="base_url">http://ratemyview.co.uk/</string>-->
    <string name="base_url">http://beta.ratemyview.co.uk/</string>
    <!--<string name="base_url">http://192.168.1.107:3010/</string>-->
    <string name="upload_path">view/</string>
    <string name="assets_domain">http://static.ratemyview.co.uk</string>
    <string name="assets_path">/uploads/</string>
    <string name="views_query_path">views/?withinarea=</string>
    <string name="overlayTileUrl">http://tiles.ratemyview.co.uk.s3-website-eu-west-1.amazonaws.com/aonbs/{z}/{x}/{y}.png</string>

    <string name="title_activity_their_view">Their View</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_their_image">Their Image</string>
    <string name="title_activity_my_view">My View</string>

    <!-- About Activity -->
    <string name="about_title">View it - Capture it - Rate it - Share it!</string>
    <string name="about_link">View your results online at <a href="http://ratemyview.co.uk">ratemyview.co.uk</a></string>
    <string name="about_tos_title">Terms of Service</string>
    <string name="about_tos_body">Once submitted, photos taken and submitted by Rate my View users are owned by the South Devon AONB and may be used for related website or project work in addition to Rate my View.</string>
    <string name="about_body">Rate my View is a new way to capture and share what you really feel about the local landscape. \n\nIt is part of a project being run by the South Devon Area of Outstanding Natural Beauty (AONB) team to discover new ways of exploring landscapes, better understand how we all see them and to discover what we particularly value.
To do this we need to burrow beneath “that’s a nice view” and delve a little deeper to find out what we really think about our coast, estuaries, countryside and villages.
\n\nBy taking part and rating your view, you will be adding your valuable piece of the jigsaw.
\nIt’s easy, quick and good fun – have a go!</string>
    <string name="about_sponsors">Sponsors</string>

    <!-- My View Activity -->
    <string-array name="array_age">
        <item>Please select</item>
        <item>0-18</item>
        <item>19-24</item>
        <item>25-44</item>
        <item>45-64</item>
        <item>65+</item>
    </string-array>
    <string-array name="array_know">
        <item>Please select</item>
        <item>Not at all</item>
        <item>Not very well</item>
        <item>Very well</item>
    </string-array>

    <string name="save_view">Save</string>
    <string name="myview_wordone">Phrase One:</string>
    <string name="myview_wordtwo">Phrase Two:</string>
    <string name="myview_wordthree">Phrase Three:</string>
    <string name="myview_comments">Comments:</string>
    <string name="myview_submit">Send</string>
    <string name="myview_know">How well do you know this location:</string>
    <string name="myview_age">Age:</string>
    <string name="myview_words">Choose 3 words or phrases to describe your view</string>
    <string name="myview_rating">Rating</string>
    <string name="myview_description">Rate Your View to help other explorers of the landscape.</string>
    <string name="myview_photodescription">Your photo</string>
    <string name="myview_phrases">Phrases</string>
    <string name="myview_about_you">About You</string>
    <string name="myview_comments_header">Comments</string>
    <string name="myview_comments_string">Are there any comments you\'d like to share about this view?</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ButtonTextSmall">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <!-- Their View Activity -->
    <string name="degree_symbol">°</string>


    <!-- left hand menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="menu_myview">My View</string>
    <string name="menu_about">About</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>


    <!--<string name="overlayTileUrl">http://tiles.ratemyview.co.uk/v2/aonbs/{z}/{x}/{y}.png</string>-->
    <string name="upload_namespace">uk.co.threeequals.ratemyview</string>
    <string name="uploading_toast">Uploading…</string>
    <string name="uploading_success">view uploaded successfully</string>
    <string name="upload_failed">Could not upload view</string>
    <string name="upload_count"> view(s) waiting to upload</string>

 </resources>