<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black" >

	<RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/navbar_background">
        
        <Button
            android:id="@+id/btnMap"
            style="@style/navbar_button"
            android:drawableTop="@drawable/navbar_mapselector"
            android:text="@string/menu_map"
        />
        
        <Button
            android:id="@+id/btnMyView"
            style="@style/navbar_button"
            android:drawableTop="@drawable/navbar_pictureselector"
            android:text="@string/menu_myview"
            android:layout_marginLeft="5dp"
        />
        
        <Button
            android:id="@+id/btnVideo"
            style="@style/navbar_button"
            android:drawableTop="@drawable/navbar_moreselector"
            android:text="@string/menu_about"
            android:layout_marginLeft="5dp"
        />
    </RadioGroup>
</RelativeLayout>
