<ScrollView
    android:id="@+id/aboutScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/android_padding_text_sides"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/aboutTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:textSize="@dimen/android_large_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:text="@string/about_body"
                    android:textSize="@dimen/android_medium_text" />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/android_padding_text_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/about_link"
                android:textSize="@dimen/android_medium_text" />



            <TextView
                android:layout_marginTop="@dimen/android_padding_text_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_tos_title"
                android:textSize="@dimen/title_size" />

            <View android:layout_width="fill_parent"
                android:layout_height="1dip"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_tos_body"
                android:textSize="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_marginTop="@dimen/android_padding_text_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sponsors"
                android:textSize="@dimen/title_size" />

            <View android:layout_width="fill_parent"
                android:layout_height="1dip"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TableRow
                    android:id="@+id/aboutTableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/sponsorView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/plymouthuni" />

                    <ImageView
                        android:id="@+id/sponsorView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/southdevonaonb" />

                </TableRow>

                <TableRow
                    android:id="@+id/aboutTableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/sponsorView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/sd_landscapes_life" />

                </TableRow>

                <TableRow
                    android:id="@+id/aboutTableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/sponsorView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/cordiale" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>