<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="end" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:minHeight="80dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/android_padding_text_sides"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/android_padding_text_sides"
                android:text="@string/myview_description" />

            <Button
                android:id="@+id/getImage"
                style="@style/ButtonTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_margin="@dimen/android_padding_text_sides"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/blue_button"
                android:text="@string/myview_photo" />

            <ImageView
                android:id="@+id/previewImage"
                android:contentDescription="@string/myview_photodescription"
                android:layout_below="@+id/textView3"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/getImage"
                android:layout_centerVertical="true"
                android:orientation="vertical" >
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/labelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginTop="@dimen/android_padding_text_sides"
            android:text="@string/myview_rating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_height="wrap_content" />
            <!-- style="@style/rmvRatingBar" -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginTop="@dimen/android_padding_text_sides"
            android:text="Phrases"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            />

        <TextView
            android:id="@+id/labelWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:text="@string/myview_words" />

        <TextView
            android:id="@+id/labelWordOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:text="@string/myview_wordone" />

        <EditText
            android:id="@+id/wordOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/labelWordTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:text="@string/myview_wordtwo" />

        <EditText
            android:id="@+id/wordTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:inputType="text"
            android:ems="10" />

        <TextView
            android:id="@+id/labelWordThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:text="@string/myview_wordthree" />
        <EditText
            android:id="@+id/wordThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:singleLine="true"
            android:inputType="text"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_marginTop="@dimen/android_padding_text_sides"
            android:text="About You"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            />

        <TextView
            android:id="@+id/labelAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:text="@string/myview_age" />
        <Spinner
            android:id="@+id/ageSpinner"
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_age"/>

        <TextView
            android:id="@+id/labelKnow"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_height="wrap_content"
            android:text="@string/myview_know" />
        <Spinner
            android:id="@+id/knowSpinner"
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_know"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_marginTop="@dimen/android_padding_text_sides"
            android:text="Comments"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            />

       <TextView
            android:id="@+id/labelComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:text="Are there any comments you'd like to share about this view?" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/android_padding_text_sides"
            android:layout_marginRight="@dimen/android_padding_text_sides"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10" />

    </LinearLayout>
	    
</ScrollView>